Ajustes para merger com Perfil